--- a/stacks/vpc/private-subnets.yml
+++ b/stacks/vpc/private-subnets.yml
@@ -37,7 +37,7 @@ Resources:
       Ipv6CidrBlock: !Select [3, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
         - Key: Project
-          Value: Porter
+          Value: platform.prx.org
         - Key: Name
           Value: !Sub ${AWS::StackName}-PrivateSubnet1 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -60,7 +60,7 @@ Resources:
       Ipv6CidrBlock: !Select [4, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
         - Key: Project
-          Value: Porter
+          Value: platform.prx.org
         - Key: Name
           Value: !Sub ${AWS::StackName}-PrivateSubnet2 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -83,7 +83,7 @@ Resources:
       Ipv6CidrBlock: !Select [5, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
         - Key: Project
-          Value: Porter
+          Value: platform.prx.org
         - Key: Name
           Value: !Sub ${AWS::StackName}-PrivateSubnet3 # TODO better name
         - Key: prx:cloudformation:stack-name
