Add VPC outputs

--- a/stacks/vpc-v2.yml
+++ b/stacks/vpc-v2.yml
@@ -108,3 +108,41 @@ Outputs:
   VpcCidrBlock:
     Description: Resource ID for the VPC
     Value: !GetAtt Vpc.CidrBlock
+
+  PublicSubnet1Id:
+    Description: ID of public subnet 1
+    Value: !GetAtt PublicSubnetsStack.Outputs.Subnet1Id
+  PublicSubnet1AZ:
+    Description: AZ of public subnet 1
+    Value: !GetAtt PublicSubnetsStack.Outputs.Subnet1AZ
+  PublicSubnet2Id:
+    Description: ID of public subnet 2
+    Value: !GetAtt PublicSubnetsStack.Outputs.Subnet2Id
+  PublicSubnet2AZ:
+    Description: AZ of public subnet 2
+    Value: !GetAtt PublicSubnetsStack.Outputs.Subnet2AZ
+  PublicSubnet3Id:
+    Description: ID of public subnet 3
+    Value: !GetAtt PublicSubnetsStack.Outputs.Subnet3Id
+  PublicSubnet3AZ:
+    Description: AZ of public subnet 3
+    Value: !GetAtt PublicSubnetsStack.Outputs.Subnet3AZ
+
+  PrivateSubnet1Id:
+    Description: ID of private subnet 1
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
+  PrivateSubnet1AZ:
+    Description: AZ of private subnet 2
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1AZ
+  PrivateSubnet2Id:
+    Description: ID of private subnet 2
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
+  PrivateSubnet2AZ:
+    Description: AZ of private subnet 2
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2AZ
+  PrivateSubnet3Id:
+    Description: ID of private subnet 3
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
+  PrivateSubnet3AZ:
+    Description: AZ of private subnet 1
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3AZ
