Update tags and outputs

--- a/stacks/vpc/private-subnets.yml
+++ b/stacks/vpc/private-subnets.yml
@@ -3,6 +3,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Private subnets for the VPC
 
 Parameters:
+  EnvironmentType:
+    Type: String
   VpcId:
     Type: AWS::EC2::VPC::Id
   VpcCidrBlock:
@@ -19,6 +21,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PrivateRouteTable #TODO Better name
         - Key: prx:cloudformation:stack-name
@@ -38,6 +42,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PrivateSubnet1 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -61,6 +67,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PrivateSubnet2 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -84,6 +92,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PrivateSubnet3 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -98,6 +108,10 @@ Resources:
       SubnetId: !Ref PrivateSubnet3
 
 Outputs:
+  RouteTableId:
+    Description: ID of the private route table
+    Value: !Ref PrivateRouteTable
+
   Subnet1Id:
     Description: ID of private subnet 1
     Value: !Ref PrivateSubnet1
