--- a/stacks/vpc/public-subnets.yml
+++ b/stacks/vpc/public-subnets.yml
@@ -3,6 +3,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Public subnets for the VPC
 
 Parameters:
+  EnvironmentType:
+    Type: String
   VpcId:
     Type: AWS::EC2::VPC::Id
   VpcCidrBlock:
@@ -18,6 +20,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-IG #TODO Better name
         - Key: prx:cloudformation:stack-name
@@ -37,6 +41,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PublicRouteTable #TODO Better name
         - Key: prx:cloudformation:stack-name
@@ -70,6 +76,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PublicSubnet1 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -93,6 +101,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PublicSubnet2 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -116,6 +126,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-PublicSubnet3 # TODO better name
         - Key: prx:cloudformation:stack-name
@@ -130,6 +142,14 @@ Resources:
       SubnetId: !Ref PublicSubnet3
 
 Outputs:
+  RouteTableId:
+    Description: ID of the public route table
+    Value: !Ref PublicRouteTable
+
+  InternetGatewayName:
+    Description: The name of the internet gateway
+    Value: !Ref InternetGateway
+
   Subnet1Id:
     Description: ID of public subnet 1
     Value: !Ref PublicSubnet1
