Add org ID parameter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -783,6 +783,7 @@ Resources:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
+        AwsOrganizationId: !Ref AwsOrganizationId
         EnvironmentType: !Ref EnvironmentType
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/vpc"]]
         CloudFormationNotificationArn:
