--- a/stacks/vpc-v2.yml
+++ b/stacks/vpc-v2.yml
@@ -5,6 +5,8 @@ Description: >-
   availability zones.
 
 Parameters:
+  AwsOrganizationId:
+    Type: String
   EnvironmentType:
     Type: String
   TemplateUrlPrefix:
