--- a/stacks/vpc-v2.yml
+++ b/stacks/vpc-v2.yml
@@ -33,6 +33,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-VPC # TODO Needs a better name
         - Key: prx:cloudformation:stack-name
@@ -87,6 +89,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AWS::StackName}-DhcpOptions #TODO Better name
         - Key: prx:cloudformation:stack-name
@@ -106,10 +110,13 @@ Resources:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
       Parameters:
+        EnvironmentType: !Ref EnvironmentType
         VpcId: !Ref Vpc
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
       Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -124,10 +131,13 @@ Resources:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
       Parameters:
+        EnvironmentType: !Ref EnvironmentType
         VpcId: !Ref Vpc
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
       Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
