--- a/stacks/vpc-v2.yml
+++ b/stacks/vpc-v2.yml
@@ -47,7 +47,7 @@ Resources:
       AmazonProvidedIpv6CidrBlock: true
       VpcId: !Ref Vpc
 
-  # VPC Peering
+  # VPC peering
   VpcPeeringOrgTrustingRole:
     Type: AWS::IAM::Role
     Properties:
@@ -74,6 +74,8 @@ Resources:
       Tags:
         - Key: Project
           Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -103,6 +105,7 @@ Resources:
       DhcpOptionsId: !Ref DhcpOptions
       VpcId: !Ref Vpc
 
+  # Routing and subnets
   PublicSubnetsStack:
     Type: AWS::CloudFormation::Stack
     DependsOn: IPv6VpcCidrBlock
@@ -123,7 +126,6 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/public-subnets.yml
       TimeoutInMinutes: 5
-
   PrivateSubnetsStack:
     Type: AWS::CloudFormation::Stack
     DependsOn: IPv6VpcCidrBlock
@@ -143,6 +145,112 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/private-subnets.yml
+      TimeoutInMinutes: 5
+
+  # Network ACLs
+  PublicNetworkAclStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        VpcId: !Ref Vpc
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/public-network-acl.yml
+      TimeoutInMinutes: 5
+  PrivateNetworkAclStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        VpcId: !Ref Vpc
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/private-network-acl.yml
+      TimeoutInMinutes: 5
+
+  # Public subnet network ACL associations
+  PublicSubnet1NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PublicSubnetsStack.Outputs.Subnet1Id
+      NetworkAclId: !GetAtt PublicNetworkAclStack.Outputs.NetworkAclName
+  PublicSubnet2NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PublicSubnetsStack.Outputs.Subnet2Id
+      NetworkAclId: !GetAtt PublicNetworkAclStack.Outputs.NetworkAclName
+  PublicSubnet3NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PublicSubnetsStack.Outputs.Subnet3Id
+      NetworkAclId: !GetAtt PublicNetworkAclStack.Outputs.NetworkAclName
+
+  # Private subnet network ACL associations
+  PrivateSubnet1NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
+      NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
+  PrivateSubnet2NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
+      NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
+  PrivateSubnet3NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
+      NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
+
+  # AWS PrivateLink and VPC endpoints
+  InterfaceEndpointsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        VpcId: !Ref Vpc
+        PublicRouteTableId: !GetAtt PublicSubnetsStack.Outputs.RouteTableId
+        PrivateRouteTableId: !GetAtt PrivateSubnetsStack.Outputs.RouteTableId
+      Tags:
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/interface-endpoints.yml
+      TimeoutInMinutes: 5
+  GatewayEndpointsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        VpcId: !Ref Vpc
+        PublicRouteTableId: !GetAtt PublicSubnetsStack.Outputs.RouteTableId
+        PrivateRouteTableId: !GetAtt PrivateSubnetsStack.Outputs.RouteTableId
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/gateway-endpoints.yml
       TimeoutInMinutes: 5
 
 Outputs:
