--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -232,7 +232,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/static-sites/root.yml"]]
+      TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/static-sites.yml"]]
       TimeoutInMinutes: 5
   ServerlessRootStack:
     Type: AWS::CloudFormation::Stack
@@ -356,7 +356,7 @@ Resources:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
-        InfrastructureNotificationsStackName: !Ref NotificationsStackName
+        StorageStackName: !Ref InfrastructureStorageStackName
         EnvironmentType: !Ref EnvironmentType
       Tags:
         - Key: prx:cloudformation:stack-name
