--- a/stacks/static-sites/beta.prx.org.yml
+++ b/stacks/static-sites/beta.prx.org.yml
@@ -15,7 +15,7 @@ Parameters:
   StaticSiteCloudFrontOai:
     Type: AWS::SSM::Parameter::Value<String>
 Resources:
-  S3StaticDeployService:
+  S3StaticDeploy:
     Type: Custom::S3StaticDeploy
     Properties:
       ServiceToken: !Ref S3StaticSiteDeployServiceToken
