Fix Lambda handler name

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -69,7 +69,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Description: Deploys the contents of a zip archive to an S3 bucket
-      Handler: lambda_function.lambda_handler
+      Handler: index.lambda_handler
       InlineCode: |
         import cfnresponse
         import boto3
