Add missing DependsOn

--- a/stacks/vpc/public-subnets.yml
+++ b/stacks/vpc/public-subnets.yml
@@ -59,6 +59,7 @@ Resources:
       RouteTableId: !Ref PublicRouteTable
   IPv6Route:
     Type: AWS::EC2::Route
+    DependsOn: VpcGatewayAttachment
     Properties:
       DestinationIpv6CidrBlock: ::/0
       GatewayId: !Ref InternetGateway
