--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -187,8 +187,8 @@ Resources:
                 Capabilities: CAPABILITY_NAMED_IAM
                 Description: >-
                   Launches a stack in one region in each account in an AWS Organization
-                  to add the CloudWatch-CrossAccountSharingRole IAM role to each account,
-                  which provides read-only access to that account's CloudWatch data.
+                  to add the DevOps-CrossAccountAccessRole IAM role to each account,
+                  which provides access to various resources for DevOps purposes.
                 TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/devops-cross-account-access-role.yml
                 Parameters: !Sub ParameterKey=OrganizationId,ParameterValue=${OrganizationId}
                 PermissionModel: SERVICE_MANAGED
