--- a/stacks/vpc/interface-endpoints.yml
+++ b/stacks/vpc/interface-endpoints.yml
@@ -7,8 +7,8 @@ Parameters:
     Type: AWS::EC2::VPC::Id
   PublicRouteTableId:
     Type: String
-  PrivateRouteTableId:
-    Type: String
+  # PrivateRouteTableId:
+  #   Type: String
 
 Resources:
   Temp:
