--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -149,6 +149,25 @@ Resources:
             - "*"
       ListenerArn: !Ref PlatformALBHTTPListener
       Priority: 1
+  LowPriorityPlatformALBHTTPUpgradeRedirectListenerRule:
+    # TODO Make this the default action
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Properties:
+      Actions:
+        - RedirectConfig:
+            Host: "#{host}"
+            Path: "/#{path}"
+            Port: "443"
+            Protocol: HTTPS
+            Query: "#{query}"
+            StatusCode: HTTP_301
+          Type: redirect
+      Conditions:
+        - Field: path-pattern
+          Values:
+            - "*"
+      ListenerArn: !Ref PlatformALBHTTPListener
+      Priority: 50000
   PlatformALBHTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
