Make some HTTP listener rules production-only

--- a/stacks/container-apps/castle.prx.org.yml
+++ b/stacks/container-apps/castle.prx.org.yml
@@ -115,6 +115,7 @@ Resources:
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   CastleALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref CastleALBTargetGroup
