--- a/stacks/container-apps/networks.prx.org.yml
+++ b/stacks/container-apps/networks.prx.org.yml
@@ -139,6 +139,7 @@ Resources:
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   ALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref ALBTargetGroup
