--- a/stacks/container-apps/publish.prx.org.yml
+++ b/stacks/container-apps/publish.prx.org.yml
@@ -105,6 +105,7 @@ Resources:
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   PublishALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref PublishALBTargetGroup
