Move Grove and iframely to discrete templates

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -559,7 +559,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "grove.prx.org.yml"]]
       TimeoutInMinutes: 5
   IframelyStack:
     Type: "AWS::CloudFormation::Stack"
@@ -598,5 +598,5 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "iframely.prx.org.yml"]]
       TimeoutInMinutes: 5
