Move Augury to discrete template

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -301,7 +301,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "augury.prx.org.yml"]]
       TimeoutInMinutes: 5
   AuguryAlarmsStack:
     Type: "AWS::CloudFormation::Stack"
