Move Remix to a discrete template

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -504,7 +504,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "remix.yml"]]
       TimeoutInMinutes: 5
   RemixScheduledTaskStack:
     Type: "AWS::CloudFormation::Stack"
