Make Remix HTTP explicit listener rule production-only

--- a/stacks/container-apps/remix.yml
+++ b/stacks/container-apps/remix.yml
@@ -183,7 +183,7 @@ Resources:
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "10"]]
   ALBHTTPExplicitListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: HasExplicitHostHeader
+    Condition: CreateProductionResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref ALBTargetGroup
